# 8086

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
tests/: CMakeLists.txt  compare.sh
